--- a/2016.10.06—icheck_demo整理/html/squaer_red.html
+++ b/2016.10.06—icheck_demo整理/html/squaer_red.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-square(方形)的red（红色）的input的效果 <br/><br/>
+square(方形)的red（红色）的input的效果 888888<br/><br/>
 <input type="checkbox">
 <input type="checkbox" checked>
 
